# haskell-playground

./: .gitignore  Factorial.dtlc  Five.dtlc  List.dtlc  README.md  TestFac.stlc  TestParser.dtlc  True.dtlc  playground.cabal  stack.yaml
classic-sequent/: Main.hs  ProofWidget.hs  React.hs  TermWidget.hs
lambda-reactive/: Main.hs  TellingTextField.hs
src/: Infinity.hs  Lambda.hs  Logic.hs  SExpr.hs  ScrapYourTypeclasses.hs  Sequent.hs  Typed.hs  Zippers.hs
src/HOAS/: Lambda.hs
src/Lambda/: Calculus.hs  Expressions.hs  Interpreter.hs  Parser.hs  PrettierPrettyPrint.hs  PrettyPrint.hs  Test.hs  Untyped.hs
src/Logic/: AndOrNotBase.hs  Parser.hs  PrettyPrinter.hs  Propositional.hs  Test.hs
src/SExpr/: Parser.hs  PrettyPrint.hs  Test.hs  Types.hs
src/Sequent/: Proof.hs  Term.hs
src/Typed/: Explore.hs  Interpreter.hs  Lambda.hs  NormalizationByEvaluation.hs  Parser.hs  PrettyPrint.hs  TypeCheck.hs
