name:                playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matheus23/haskell-playground2#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Krüger
maintainer:          matheus.dev@gmail.com
copyright:           2017 Philipp Krüger
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Logic, Lambda, Sequent
  other-modules:       Lambda.Expressions,
                       Lambda.Interpreter,
                       Lambda.Parser,
                       Lambda.PrettyPrint,
                       Lambda.Test,
                       Lambda.Untyped,
                       Logic.Parser,
                       Logic.PrettyPrinter,
                       Logic.Propositional,
                       Logic.Test,
                       Sequent.Term,
                       Sequent.Proof

  build-depends:       base, megaparsec >= 6.0.0, containers, pretty, QuickCheck >= 2.10.0, recursion-schemes
  default-language:    Haskell2010

executable lambda-reactive
  hs-source-dirs:      lambda-reactive
  main-is:             Main.hs
  build-depends:       playground, base, containers, linear,
                       Reactives, DeclarativeGraphics, DeclarativeGraphics-Cairo, DeclarativeGraphics-SDL

executable classic-sequent
 hs-source-dirs:      classic-sequent
 main-is:             Main.hs
 other-modules:       TermWidget, ProofWidget
 build-depends:       playground, base, containers, linear, recursion-schemes,
                      Reactives, DeclarativeGraphics, DeclarativeGraphics-Cairo, DeclarativeGraphics-SDL

source-repository head
  type:     git
  location: https://github.com/githubuser/playground
