name:                playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matheus23/haskell-playground2#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Krüger
maintainer:          matheus.dev@gmail.com
copyright:           2017 Philipp Krüger
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Logic, Lambda, Sequent, Infinity, Zippers, SExpr, Typed
  other-modules:       Lambda.Expressions,
                       Lambda.Interpreter,
                       Lambda.Parser,
                       Lambda.PrettyPrint,
                       Lambda.Test,
                       Lambda.Untyped,
                       Logic.Parser,
                       Logic.PrettyPrinter,
                       Logic.Propositional,
                       Logic.Test,
                       Sequent.Term,
                       Sequent.Proof,
                       SExpr.Parser,
                       SExpr.Types,
                       SExpr.PrettyPrint,
                       SExpr.Test,
                       Typed.Lambda,
                       Typed.Parser,
                       HOAS.Lambda

  build-depends:       base, megaparsec >= 6.0.0, containers >= 0.5.10, pretty, QuickCheck >= 2.10.0,
                       recursion-schemes, ansi-wl-pprint, deriving-compat
  default-language:    Haskell2010
  extensions:          DeriveFunctor, OverloadedStrings, TemplateHaskell, ScopedTypeVariables

executable lambda-reactive
  hs-source-dirs:      lambda-reactive
  main-is:             Main.hs
  build-depends:       playground, base, containers, linear,
                       Reactives, DeclarativeGraphics, DeclarativeGraphics-Cairo, DeclarativeGraphics-SDL
  extensions:          DeriveFunctor, OverloadedStrings, TemplateHaskell, ScopedTypeVariables

executable classic-sequent
  hs-source-dirs:      classic-sequent
  main-is:             Main.hs
  other-modules:       TermWidget, ProofWidget, React
  build-depends:       playground, base, containers, linear, recursion-schemes,
                       Reactives, DeclarativeGraphics, DeclarativeGraphics-Cairo, DeclarativeGraphics-SDL
  extensions:          DeriveFunctor, OverloadedStrings, TemplateHaskell, ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/githubuser/playground
